# ryu-monitors

./: README.md  manifest.json  plugin.json
.github/workflows/: canary.yml  nightly.yml  release.yml
backend/: Cargo.toml  Cargo.toml-E
backend/src/: api.rs  lib.rs  main.rs  net_guard.rs  paths.rs  store.rs
crates/core/notify/: Cargo.toml
crates/core/notify/src/: lib.rs
