[package]
name = "ryu-monitors"
version = "0.0.5"
edition = "2021"
license = "Apache-2.0"
description = "Website monitors for Ryu (price / stock / keyword / content-diff / uptime): watch a URL on a schedule and alert on change, with notification fan-out (webhook / Telegram / Expo push / BYO SMTP email) — an extracted Core capability crate (engine + SQLite store + notify + HTTP surface). Also owns the shared app-inbox notification store + `deliver_user_notification` and the policy-alert dedupe/delivery store. In-process default; Core consumes it as a path dependency. Cross-cutting deps (the Spider fetch MCP tool, desktop-toast events, BYO SMTP send, the notification plugin hooks, and the scheduler backing job) are inverted through the `MonitorsHost` trait so this crate has ZERO dependency on apps/core."
repository = "https://github.com/amajorai/ryu"

# The out-of-process sidecar binary. Core spawns it (`kind: local`, sibling on
# PATH / `RYU_MONITORS_BIN`), health-checks it, and proxies `/api/monitors/*` to it on
# loopback — exactly like `ryu-quests` / `ryu-mail`. The same crate still compiles
# INTO Core as a lib path-dependency (in-process default); this bin is just the
# process shell around the crate's `routes()` + `MonitorEngine`.
[[bin]]
name = "ryu-monitors"
path = "src/main.rs"

# Versions are matched to apps/core/Cargo.toml so the in-process merge into Core's
# axum router has no version skew. This crate has ZERO dependency on apps/core.
[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
tracing = "0.1"
async-trait = "0.1"
ryu-notify = { path = "../../../crates/core/notify", version = "0.0.5" }
humantime = "2"
regex = "1"
sha2 = "0.10"
url = "2"
# Sidecar-binary-only deps (data-dir resolution + logging), mirroring `ryu-quests` /
# `ryu-mail`. Core already pulls all of these, so there is no new dependency in the
# in-process build.
dirs = "5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
